--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "1.0.0",
     "main": "server.js",
     "dependencies": {
-      "@lhci/server": "0.12.x"
+        "@lhci/server": "0.12.x",
+        "pg": "^8.11.3",
+        "pg-hstore": "^2.3.4"
     },
     "engines": {
-      "node": "18.x"
+        "node": "18.x"
     }
-  }
+}
